--- a/assets/styles/startup.less
+++ b/assets/styles/startup.less
@@ -930,6 +930,7 @@
       margin-top: -10px;
       margin-left: -10px;
       margin-right: -10px;
+      overflow: hidden;
 
       .picture {
         display: block;
